feat: add IndexingDocumentCreator service for schema-less document creation from JSON and CSV