@@ -1,6 +1,5 @@
 package org.apache.solr.mcp.server;
 
-import java.util.concurrent.TimeUnit;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.impl.Http2SolrClient;
 import org.apache.solr.common.SolrInputDocument;
@@ -13,6 +12,7 @@ import org.testcontainers.utility.DockerImageName;
 
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -22,6 +22,7 @@ class IndexingServiceTest {
     private static final String COLLECTION_NAME = "indexing_test_" + System.currentTimeMillis();
     @Container
     static SolrContainer solrContainer = new SolrContainer(DockerImageName.parse("solr:9.4.1"));
+    private IndexingDocumentCreator indexingDocumentCreator;
     private IndexingService indexingService;
     private SearchService searchService;
     private SolrClient solrClient;
@@ -40,13 +41,14 @@ class IndexingServiceTest {
         // Initialize services
         SolrConfigurationProperties properties = new SolrConfigurationProperties(solrUrl);
         collectionService = new CollectionService(solrClient, properties);
-        indexingService = new IndexingService(solrClient, properties);
+        indexingDocumentCreator = new IndexingDocumentCreator();
+        indexingService = new IndexingService(solrClient, properties, indexingDocumentCreator);
         searchService = new SearchService(solrClient);
     }
 
 
     @Test
-    void testCreateSchemalessDocuments() throws Exception {
+    void testCreateSchemalessDocumentsFromJson() throws Exception {
         // Test JSON string
         String json = """
                 [
@@ -65,7 +67,7 @@ class IndexingServiceTest {
                 """;
 
         // Create documents
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocuments(json);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromJson(json);
 
         // Verify documents were created correctly
         assertNotNull(documents);
@@ -165,7 +167,7 @@ class IndexingServiceTest {
             Object idValue = book.get("id");
             String id;
             if (idValue instanceof List) {
-                id = (String) ((List<?>) idValue).get(0);
+                id = (String) ((List<?>) idValue).getFirst();
             } else {
                 id = (String) idValue;
             }
@@ -648,7 +650,7 @@ class IndexingServiceTest {
                 """;
 
         // Create documents
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocuments(json);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromJson(json);
 
         // Verify no documents were created since input is not an array
         assertNotNull(documents);
@@ -672,13 +674,13 @@ class IndexingServiceTest {
                 """;
 
         // Create documents
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocuments(json);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromJson(json);
 
         // Verify documents were created correctly
         assertNotNull(documents);
         assertEquals(1, documents.size());
 
-        SolrInputDocument doc = documents.get(0);
+        SolrInputDocument doc = documents.getFirst();
         assertEquals("value_types_001", doc.getFieldValue("id"));
 
         // Verify each value type was converted correctly
@@ -709,13 +711,13 @@ class IndexingServiceTest {
                 """;
 
         // Create documents
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocuments(json);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromJson(json);
 
         // Verify documents were created correctly
         assertNotNull(documents);
         assertEquals(1, documents.size());
 
-        SolrInputDocument doc = documents.get(0);
+        SolrInputDocument doc = documents.getFirst();
 
         // Verify field names were sanitized correctly
         assertEquals("field_names_001", doc.getFieldValue("id"));
